--- a/clientRss/src/component/Component2/Component2.module.css
+++ b/clientRss/src/component/Component2/Component2.module.css
@@ -1,1 +1,8 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    background-color:rgb(234, 230, 230);
+    height: 100vh ;
 
+}
