--- a/clientRss/src/App.module.css
+++ b/clientRss/src/App.module.css
@@ -1,9 +1,17 @@
 .container {
-    display: flex;
-    flex-direction: row;
+    margin-top: 0;
+    width: 100%;
     height: 100vh;
-    max-height: 100vh;
     background-color: rgb(12, 12, 175);
     overflow: hidden;
     
+}
+
+.component1  {
+    background-color: rgba(242, 242, 246, 0.839);
+    width: 100%;
+    height: 50vh;
+    overflow: hidden;
+    border-color: black;
+    margin-right: 0;
 }
