--- a/clientRss/src/component/Component1/Component1.module.css
+++ b/clientRss/src/component/Component1/Component1.module.css
@@ -1,9 +1,6 @@
-.div  {
-    background-color: rgba(242, 242, 246, 0.839);
-    height: 300px ;
-    overflow: hidden;
-    border-color: black;
-    border: 100px,10px,10px;
-    margin-top: 1%;
+.component1 {
+    display: flex;
+    flex-direction: column;
+    
 }
 
