--- a/clientRss/src/App.module.css
+++ b/clientRss/src/App.module.css
@@ -15,4 +15,8 @@
     overflow: hidden;
     border-color: black;
     margin-right: 0;
+
+    @media (max-width:700px) {
+        height: 45vh;
+    }
 }
