--- a/clientRss/src/component/Component2/Component2.module.css
+++ b/clientRss/src/component/Component2/Component2.module.css
@@ -2,14 +2,34 @@
     display: flex;
     flex-direction: row;
     padding-top: 5%;
-    padding-right: 2%;
+    padding-right: 1%;
     align-items: start;
     background-color:rgb(234, 230, 230);
     height: 100vh ;
 
+    @media  (max-width: 700px) {
+        
+        flex-direction: column;
+        padding-top: 3%;
+        padding-left: 2%;
+
+        
+    }
 }
 
 .img {
     object-fit: cover;
     max-width: 50%;
+    border-radius: 15px;
+    margin-top: 2%;
+   
+    @media  (max-width: 700px) {
+        
+
+        max-width: 100%;
+        
+    }
+
+
+
 }
