--- a/clientRss/src/WeatherComponent/WeatherComponent.module.css
+++ b/clientRss/src/WeatherComponent/WeatherComponent.module.css
@@ -1,14 +1,7 @@
 .container  {
-    background-color: #2a5cc1;
+    background-color: #ea4517;
     width: 100vh;
     height: 100vh;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-}
-
-.card {
-    background-color: white;
-    width: 100%;
-    
+   
+  
 }
