--- a/clientRss/src/component/Component2/Component2.module.css
+++ b/clientRss/src/component/Component2/Component2.module.css
@@ -7,7 +7,7 @@
     background-color:rgb(234, 230, 230);
     height: 100vh ;
 
-    @media  (max-width: 700px) {
+    @media  (max-width: 1000px) {
         
         flex-direction: column;
         padding-top: 3%;
@@ -22,11 +22,17 @@
     max-width: 50%;
     border-radius: 15px;
     margin-top: 2%;
-   
     @media  (max-width: 700px) {
         
-
+        background-color: blue;
+      
         max-width: 100%;
+        
+    };
+    @media  (min-width:701px) and (max-width: 1000px) {
+        
+        margin-left: 10%;
+        max-width: 80%;
         
     }
 
